--- a/doc/kmail/getting-started.docbook
+++ b/doc/kmail/getting-started.docbook
@@ -249,8 +249,7 @@ server. You should carefully test this to make sure it works safely.</para>
 
 <sect3 id="receiving-mail-imap-pop3">
 <title>Options for both <acronym>IMAP</acronym> and POP3</title>
-
-<!-- TODO: move all this, this isn't important for beginners?! -->
+<!-- removed in 4.8
 <para>If you select <guilabel>Store POP password</guilabel> or 
 <guilabel>Store IMAP Password</guilabel> &kmail; will remember 
 your password so you will not have to
@@ -260,7 +259,7 @@ type it every time you start &kmail; and fetch new mail.</para>
 people who can access your configuration files (&eg; system
 administrators) can easily get your password if you select this
 option.</para></warning>
-
+-->
 <para>&kmail; supports encryption via <guilabel>SSL/TLS</guilabel> and
 <guilabel>STARTTLS</guilabel> (<guilabel>SSL/TLS</guilabel> should be preferred
 if it is available).</para>
