--- a/doc/kmail/troubleshooting.docbook
+++ b/doc/kmail/troubleshooting.docbook
@@ -10,8 +10,8 @@
       </author>
 <!-- TRANS:ROLES_OF_TRANSLATORS -->
       </authorgroup>
-<date>2012-01-28</date>
-      <releaseinfo>&kde; SC 4.8</releaseinfo>
+<date>2012-07-28</date>
+      <releaseinfo>&kde; SC 4.9</releaseinfo>
 </chapterinfo>
 
 <title>&kmail; Troubleshooting</title>
@@ -157,6 +157,44 @@ DefaultResourceId=akonadi_maildir_resource_0</userinput>
 <para>Now remove the <guilabel>Local Folders</guilabel> that you don't want to use anymore.
 </para>
 <para>If it keeps reappearing and the <guilabel>Mail Dispatcher Agent</guilabel> still crashes, you need to do one more thing in <application>akonadiconsole</application>. Go to the <guilabel>Browser</guilabel> tab, find the outbox you <emphasis>want</emphasis> to use, right click on it, select <guilabel>Folder Properties</guilabel>, <guilabel>Attributes</guilabel> tab, enter <userinput>SpecialCollectionAttribute</userinput> then click <guilabel>Add</guilabel>, double click on the <guilabel>Value</guilabel> near the <guilabel>SpecialCollectionAttribute</guilabel> and enter <userinput>outbox</userinput>. Add also another attribute, the attribute name has to be <guilabel>ENTITYDISPLAY</guilabel> and the value <userinput>("outbox" "mail-folder-outbox" "" ())</userinput> (just copy paste from here). Restart <application>akonadi</application> and now you should be able to remove completely the unneeded local folder account.
+</para>
+</sect1>
+
+<sect1 id="you-get-the-error-unable-to-fetch-item-from-backend-when-entering-imap-folder"><title>You get the error Unable to fetch item from backend when entering IMAP folder</title>
+<para>There are a number of possible reasons for this and it is something the &kmail; team hopes to tackle in time. Meanwhile, there are some workarounds:
+</para>
+<variablelist>
+  <varlistentry>
+    <term>Workaround 1</term>
+    <listitem>
+      <itemizedlist>
+        <listitem><para>edit <filename>~/.local/share/akonadi/mysql.conf</filename></para></listitem>
+        <listitem><para>Under the <guilabel>[mysql]</guilabel> section, add: <userinput>binlog_format=row</userinput></para></listitem>
+      </itemizedlist>
+      <para>If this does not work, try workaround 2 (below).
+      </para>
+    </listitem>
+  </varlistentry>
+  <varlistentry>
+    <term>Workaround 2</term>
+    <listitem>
+      <para>This one is mostly a matter of restarting so &kmail; can fetch those pesky items... Some possible steps:</para>
+      <para>Use <keycombo>&Alt;<keycap>F2</keycap></keycombo> or &konsole; to type: <userinput><command>kquitapp kmail</command></userinput>, then wait a minute, then <userinput><command>akonadictl stop</command></userinput>, wait a minute, type <userinput><command>akonadictl start</command></userinput>, wait a minute, type <userinput><command>kmail</command></userinput>. This stops &kmail; (closing <emphasis>all</emphasis> windows), stops the &kmail; backend, starts the &kmail; backend, starts &kmail;. Having a working internet connection increases the chances of success. Sometimes, you can also just do <userinput><command>kquitapp kmail</command></userinput>, wait a minute, and start &kmail; again. Often, a few restarts seem to be needed. What exactly the reason is is unclear, but on bad network connections it is more likely to happen.
+      </para>
+    </listitem>
+  </varlistentry>
+</variablelist>
+<para>See also the below item for how <application>akonadiconsole</application> can be helpful.
+</para>
+</sect1>
+
+<sect1 id="your-mails-are-not-being-sent-without-error-messages"><title>Your mails are not being sent, without error messages</title>
+<para>If &kmail; does not send mail without saying anything, the <quote>agent</quote> responsible for dispatching the messages can be stuck. Of course, you need to ensure you have proper network connectivity for mail to be send!
+</para>
+<para>To remedy this, it might help to abort the current action and restart it. First, quit &kmail; by using &krunner; (<keycombo>&Alt;<keycap>F2</keycap></keycombo>) or &konsole; and typing: <userinput><command>kquitapp kmail</command></userinput>. Note that a normal <keycombo>&Alt;<keycap>F4</keycap></keycombo> or <menuchoice><guimenu>File</guimenu><guimenuitem>Quit</guimenuitem></menuchoice> does <emphasis>not</emphasis> do the trick! Wait a minute, then start &kmail; again. Now start <application>akonadiconsole</application> using &krunner; (<keycombo>&Alt;<keycap>F2</keycap></keycombo>) or &konsole;. Go to the <guilabel>Mail Dispatcher Agent</guilabel>, do a right-click and abort the current action. You will most likely get some error messages popping up.
+ Go back to &kmail; and choose <menuchoice><guimenu>File</guimenu><guimenuitem>Send Queued Messages</guimenuitem></menuchoice>. Now it might work. If not, instead of aborting the current action, try toggling the offline/offline status of the <guilabel>Mail Dispatcher Agent</guilabel> or restarting things like mentioned in the workaround 2 of the problem above this one.
+</para>
+<para><note><para>akonadiconsole can be quite helpful for a number of situations as it shows all the <quote>agents</quote>, the separate components of the &kmail; backend. You can stop and start them, put them in offline mode, abort ongoing actions &etc; It can be very helpful when things get stuck.</para></note>
 </para>
 </sect1>
 
