--- a/backupmail/TODO
+++ b/backupmail/TODO
@@ -1,4 +1,6 @@
 TODO 4.10:
+----------
+
 - Allow to merge ldap config
 - Allow to merge KMail Snippet config
 - Allow to merge akonadi_archivemail_agentrc config
@@ -6,4 +8,5 @@ TODO 4.10:
 - Import/Export KAddressBook config
 - Import/Export KOrganizer config
 - Rename it.
- 
+
+- Add export mode 
