--- a/backupmail/TODO
+++ b/backupmail/TODO
@@ -3,7 +3,7 @@ TODO 4.10:
 
 - Allow to merge ldap config (DONE)
 - Allow to merge KMail Snippet config
-- Allow to merge akonadi_archivemail_agentrc config
+- Allow to merge akonadi_archivemail_agentrc config (DONE)
 
 - Import/Export KAddressBook config
 - Import/Export KOrganizer config
